// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`mergify default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

queue_rules:
  - name: default
    update_method: merge
    queue_conditions:
      - "#approved-reviews-by>=1"
      - -label~=(do-not-merge)
      - status-success=build
    merge_method: squash
    commit_message_template: |-
      {{ title }} (#{{ number }})

      {{ body }}
pull_request_rules:
  - name: Automatic merge on approval and successful build
    actions:
      delete_head_branch: {}
      queue:
        name: default
    conditions:
      - "#approved-reviews-by>=1"
      - -label~=(do-not-merge)
      - status-success=build
merge_queue:
  max_parallel_checks: 1
"
`;

exports[`mergify with automerge options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

queue_rules:
  - name: default
    update_method: merge
    queue_conditions:
      - "#approved-reviews-by>=3"
      - -label~=(do-not-merge|missing-tests)
      - status-success=build
    merge_method: squash
    commit_message_template: |-
      {{ title }} (#{{ number }})

      {{ body }}
pull_request_rules:
  - name: Automatic merge on approval and successful build
    actions:
      delete_head_branch: {}
      queue:
        name: default
    conditions:
      - "#approved-reviews-by>=3"
      - -label~=(do-not-merge|missing-tests)
      - status-success=build
merge_queue:
  max_parallel_checks: 1
"
`;

exports[`mergify without automerge, with custom rules 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

queue_rules: []
pull_request_rules:
  - actions:
      - action
    conditions:
      - condition
    name: rule-name
merge_queue:
  max_parallel_checks: 1
"
`;
